refactor: adjust thread pooling, database schema, and logging for performance and clarity
- Replace virtual thread executor with fixed thread pool (10 threads) in `EfficientTransactionIngestor`
- Update database schema to use `DECIMAL(20,2)` for monetary fields in `script.sql` and `script_flat.sql`
- Comment out Semaphore usage and logging in `TransactionDBRepository`
- Improve error handling with detailed log messages